<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTelaPrincipal"
        android:text="@string/textoTelaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textStyle="bold"
        android:textSize="36sp" android:textAlignment="center"/>

    <Button
        android:id="@+id/btNovaActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNovaActivity"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="31dp" />

    <Button
        android:id="@+id/btnChrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnChrome"
        app:layout_constraintTop_toBottomOf="@+id/btNovaActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>