<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundaTela">

    <TextView
        android:id="@+id/textoNovaActivity"
        android:text="@string/textoNovaActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoEndereco"
        app:layout_constraintBottom_toTopOf="@+id/btnFechar"
        app:layout_constraintTop_toBottomOf="@+id/textoNovaActivity" />

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFechar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="165dp" />

</androidx.constraintlayout.widget.ConstraintLayout>